--- a/EntityComponentSystem/EntityComponentSystem.vcxproj
+++ b/EntityComponentSystem/EntityComponentSystem.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{D0857CB8-E2C6-4147-BDF0-48DE1C81BC55}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CMyEntityComponentSystem</RootNamespace>
+    <ProjectName>EntityComponentSystem</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -81,7 +82,6 @@
     <ClInclude Include="Components\VelocityComponent.h" />
     <ClInclude Include="Entity\ComponentExtractor.h" />
     <ClInclude Include="Entity\Entity.h" />
-    <ClInclude Include="Entity\EntityManager.h" />
     <ClInclude Include="Systems\MovementSystem.h" />
     <ClInclude Include="Systems\System.h" />
     <ClInclude Include="World.h" />
@@ -89,7 +89,6 @@
   <ItemGroup>
     <ClCompile Include="Entity\ComponentExtractor.cpp" />
     <ClCompile Include="Entity\Entity.cpp" />
-    <ClCompile Include="Entity\EntityManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Systems\System.cpp" />
     <ClCompile Include="World.cpp" />
