--- a/EntityComponentSystem/EntityComponentSystem.vcxproj
+++ b/EntityComponentSystem/EntityComponentSystem.vcxproj
@@ -18,13 +18,13 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v120_CTP_Nov2012</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -77,21 +77,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Components\Component.h" />
-    <ClInclude Include="Components\PositionComponent.h" />
-    <ClInclude Include="Components\VelocityComponent.h" />
-    <ClInclude Include="Entity\ComponentExtractor.h" />
-    <ClInclude Include="Entity\Entity.h" />
-    <ClInclude Include="Systems\MovementSystem.h" />
-    <ClInclude Include="Systems\System.h" />
-    <ClInclude Include="World.h" />
+    <ClInclude Include="Include\Component.h" />
+    <ClInclude Include="Include\ComponentExtractor.h" />
+    <ClInclude Include="Include\Entity.h" />
+    <ClInclude Include="Include\System.h" />
+    <ClInclude Include="Include\World.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Entity\ComponentExtractor.cpp" />
-    <ClCompile Include="Entity\Entity.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Systems\System.cpp" />
-    <ClCompile Include="World.cpp" />
+    <ClCompile Include="src\ComponentExtractor.cpp" />
+    <ClCompile Include="src\Entity.cpp" />
+    <ClCompile Include="src\System.cpp" />
+    <ClCompile Include="src\World.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
