Added more comments

--- a/EntityComponentSystem/EntityComponentSystem.vcxproj
+++ b/EntityComponentSystem/EntityComponentSystem.vcxproj
@@ -18,13 +18,13 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v120_CTP_Nov2012</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -42,6 +42,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <TargetName>$(ProjectName)-d</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -77,11 +78,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Include\Component.h" />
-    <ClInclude Include="Include\ComponentExtractor.h" />
-    <ClInclude Include="Include\Entity.h" />
-    <ClInclude Include="Include\System.h" />
-    <ClInclude Include="Include\World.h" />
+    <ClInclude Include="Aquila\Include\Component.h" />
+    <ClInclude Include="Aquila\Include\ComponentExtractor.h" />
+    <ClInclude Include="Aquila\Include\Entity.h" />
+    <ClInclude Include="Aquila\Include\System.h" />
+    <ClInclude Include="Aquila\Include\World.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ComponentExtractor.cpp" />
