--- a/EntityComponentSystem/EntityComponentSystem.vcxproj.filters
+++ b/EntityComponentSystem/EntityComponentSystem.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="Aquila\Include\Component.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Aquila\Include\ComponentExtractor.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Aquila\Include\Entity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -30,11 +27,11 @@
     <ClInclude Include="Aquila\Include\System.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Aquila\Include\ComponentProvider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\ComponentExtractor.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\Entity.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -42,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\World.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ComponentProvider.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
